--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Nicolas Bergeron # your name (or website title) here
 logo: "images/projetPhoto/me.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Je suis entraint de finir mon AEC (Programmation orienté objet et Technologie web)
-  et je suis à la recherche d'un stage/premier emploi dans le domaine.
+  Je suis entrain de terminer mon AEC, Programmation orienté objet et Technologie web
+  et je suis à la recherche d'un stage/premier emploi dans le domaine de la programmation.
   <br><br>  
   
 theme: jekyll-theme-minimal
