--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 title: Nicolas Bergeron # your name (or website title) here
 logo: "images/projetPhoto/me.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Je suis entrain de terminer mon AEC, Programmation orienté objet et Technologie web
-  et je suis à la recherche d'un stage/premier emploi dans le domaine de la programmation.
-  <br><br>  
+  Je suis entrain de terminer mon AEC, Programmation orienté objet et Technologie web 
+  au collège Rosemont.  
+  <br><br>
+  Je suis aussi à la recherche d'un stage/premier emploi dans le domaine de la programmation.
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
